# neurologist-consultation-system

./: .env.example  .gitignore  LICENSE  README.md  manage.py  pyproject.toml
config/settings/: base.py  local.py  production.py
core/: admin.py  api.py  forms.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
core/forms/: __init__.py  medical.py  patient.py  user.py
core/management/commands/: generate_sample_data.py  load_sample_patients.py
core/migrations/: 0001_initial.py
core/models/: __init__.py  medical.py  notification.py  patient.py  user.py
core/serializers/: __init__.py  medical.py  notification.py  patient.py  user.py
core/templates/core/: alert_list.html  base.html  confirm_delete.html  consultation_form.html  dashboard.html  imaging_study_form.html  lab_result_form.html  landing.html  login.html  patient_detail.html  patient_form.html  patient_list.html  signup.html  vital_sign_form.html
core/tests/forms/: test_medical.py  test_patient.py  test_user.py
core/tests/models/: test_medical.py  test_notification.py  test_patient.py  test_user.py
core/tests/serializers/: test_medical.py  test_patient.py  test_user.py
stroke_unit/: asgi.py  settings.py  urls.py  wsgi.py
